Fix auto-configuration to apply a shared container entity manager instance for GraphQLJPASchemaBuilder  (#380)
* Fix intermittent  incorrect query results due to Hibernate proxies

* make query result list streams and batch loaders thread safe

* Apply shared entity manager auto-configuration for GraphqlSchemaBuilder

* Refactor transactional execution delegate strategy auto-configuration

* revert enable result stream in GraphQLJpaQueryFactory

* Refine execution strategy auto-configuration for mulitple datasources

* Add ChainedTransactionManager bean to multiple-datasources tests